110 documentation (#265)
* Bump deps versions

* Add codecov support

* Fix tools.build deps

* Add codecov in CI

* Add docs

* Update README

* Add more contributing instructions

* Proper author mention

* Create web-app-features.md

* Create mobile-app-features.md

* Move features doc in their own folder

* Fix badges link gaps

* Move codecov to dedicated yml file